// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ab sequence many AST to match snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
]
`;

exports[`ab sequence many AST to match snapshot 2`] = `
[
  [
    "a",
    "b",
  ],
  [
    "a",
    "b",
  ],
]
`;

exports[`ab sequence many Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`ab sequence many Error to match snapshot 2`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`ab sequence many Error to match snapshot 3`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`ab sequence many Error to match snapshot 4`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`ab sequence many Error to match snapshot 5`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
